--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moni-tu/myMovies.git"
+  },
+  "bugs": {
+    "url": "https://github.com/moni-tu/myMovies/issues"
+  },
+  "homepage": "https://github.com/moni-tu/myMovies#readme"
 }
